--- a/front/board.css
+++ b/front/board.css
@@ -19,6 +19,7 @@
     top: 20%;
     width: 100%;
     height: 50%;
+    padding-left: 1rem;
 }
 
 #play div {
@@ -27,6 +28,10 @@
     margin-bottom: 2%;
     /* background: none; */
     /* background-color: aqua; */
+}
+
+#play span>a~a {
+    margin-left: 10px;
 }
 
 #play-link>span {
@@ -249,4 +254,8 @@ header {
 #container-message>#message>button {
     align-self: flex-end;
     cursor: pointer;
+}
+
+.invisible {
+    visibility: hidden;
 }
