--- a/front/board.css
+++ b/front/board.css
@@ -20,6 +20,7 @@
     width: 100%;
     height: 50%;
     padding-left: 1rem;
+    left: 20%;
 }
 
 #play div {
@@ -56,22 +57,36 @@ body {
     min-width: 900px;
 }
 
+.boat {
+    display: inline-flex;
+}
 
-/* 
-.body {
-    position: relative;
-    overflow-y: scroll;
-    cursor: default;
-    min-height: 100%;
-    background: #fff;
-    height: 100%;
-    width: 100%;
-} */
+.boat-type {
+    min-width: max-content;
+}
+
+.boat-part {
+    display: block;
+    height: 7px;
+    width: 7px;
+    margin: 1px;
+    background: rgba(0, 0, 255, .25);
+    word-wrap: none;
+}
+
+.table-container {
+    display: flex;
+    justify-content: space-evenly;
+}
 
 #flex-container {
     /* width: 100%; */
     /* display: flex; */
-    padding: 5rem;
+    padding: 5rem 0;
+}
+
+.sunk>.boat-part {
+    background-color: rgba(255, 0, 0, 0.5);
 }
 
 #board-container {
