--- a/front/board.css
+++ b/front/board.css
@@ -14,12 +14,12 @@
 
 #play {
     width: 50%;
-    max-width: 300px;
+    max-width: 400px;
     position: absolute;
     top: 20%;
     width: 100%;
     height: 50%;
-    padding-left: 1rem;
+    /* padding-left: 1rem; */
     left: 20%;
 }
 
